src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__delete_series_ui__delete_series_ui_tests__tests__snapshot_tests__delete_series_ui_renders_delete_series.snap
---
source: src/ui/sonarr_ui/library/delete_series_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭─────────────────────  Delete Series  ─────────────────────╮                                                     
                                                   │         Do you really want to delete the series:          │                                                     
                                                   │                           Test?                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │        Delete Series File: │ ✔ │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │        Add List Exclusion: │ ✔ │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
